# Atlas

./: .gitignore  README.md  index.html  package-lock.json  package.json  test_cuda.py  test_cuda_simple.py  vitest.config.ts
python_workers/: audio_event_detector.py  audio_separator.py  gacha_history_worker.py  model_enhancer.py  requirements-ml.txt  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: audio_detection.rs  auth.rs  autostart.rs  discord.rs  downloads.rs  friends.rs  gacha.rs  gaming.rs  launcher.rs  ml_jobs.rs  mod.rs  performance.rs  playlist_uploader.rs  server.rs  settings.rs  task_monitor.rs  updater.rs  valorant.rs
src-tauri/src/discord/: mod.rs  presence.rs
src-tauri/src/file_manager/: json_ops.rs  mod.rs
src-tauri/src/gaming/: bottleneck.rs  detector.rs  mod.rs  session.rs
src-tauri/src/launcher/: hoyoplay_detector.rs  icon_extractor.rs  mod.rs  playtime_tracker.rs  riot_detector.rs  steam_detector.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: audio_detection.rs  auth.rs  download.rs  friends.rs  gacha.rs  gaming.rs  launcher.rs  ml_job.rs  mod.rs  performance.rs  playlist_uploader.rs  server.rs  settings.rs  valorant.rs
src-tauri/src/performance/: collector.rs  gpu.rs  mod.rs
src-tauri/src/process_manager/: mod.rs  python_worker.rs
src-tauri/src/task_monitor/: categorizer.rs  descriptions.rs  gpu_tracker.rs  mod.rs  models.rs  profiles.rs  restore.rs  system_tracker.rs
src-tauri/src/utils/: mod.rs  paths.rs
(+147 files in other folders)
