[package]
name = "atlas"
version = "0.1.0"
description = "Atlas - Local-first desktop app for media processing and ML"
authors = ["Atlas Team"]
edition = "2021"

[lib]
name = "atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-ico"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["process", "io-util", "time", "rt-multi-thread"] }
thiserror = "1"
lazy_static = "1"
parking_lot = "0.12"
cookie = "0.18"
url = "2"
# Performance monitoring
sysinfo = "0.30"
nvml-wrapper = "0.10"
# Auto-updater
tauri-plugin-updater = "2"
time = { version = "0.3", features = ["formatting"] }
base64 = "0.22"
ureq = "2"
# Discord Rich Presence
discord-rich-presence = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
winreg = "0.52"
